Version 35

--Prevented blocked family members from jumping back to positions on top of
  shotgun or panic button at the end of a robbery (allowed insta-kill and
  insta-press situations to be created).





Version 34    Live Server Fixes

--Fixed stale price list issue that could result in house loss after editing
  (thanks Mark Host).

--True doormat suicide now leaves a tape.

--Fixed paintings getting lost from the game if a robber who just stole a
  painting dies in another house before returning home with the painting 
  (thanks LiteS).





Version 34    2014-February-28

--Prevented multiple leave actions from being appended to the end of the move
  list if the player is mashing the keyboard while leaving a robbery.  This
  caused the family to be processed twice at the end, resulting in family
  duplication in the resulting map, leading to robber death from simulation
  mismatch.

--Blocked robber actions after death or reaching vault (in case of keyboard
  mashing where several key events might be queue for a given frame) to prevent
  family duplication due to multiple end actions.  Also added a check to always
  prevent multiple occurrences of family end processing.
 
--Fixed bug where family members jumped back to their starting postitions when
  panning around a paused security tape at the end of the robbery.

--Added connection icons to all live house pages (editing, robbery, backpack,
  etc.) for pings that take longer than 8 seconds to connect or need to be
  retried.  This lets people know that their network may have gone out before
  its too late (thanks Joshua Collins).





Version 33  Live Server Fixes

--Temporary fix to prevent people who submitt #L#L#L move lists (multiple leave
  events due to mashing the keyboard during client-side framerate lag) from
  being killed (thanks Jabloko).

--Fixed undefined variable warning in set_error_handler (thanks MMaster).

--Better error logging when server-side simulation fails.
